# MLOps

./: .gitignore  .gitmodules  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  secrets.yaml  settings.py
lab1/homework/: .pre-commit-config.yaml  app.py  pyproject.toml
lab1/homework/src/: load_models.py
lab1/lab/: .gitignore  Dockerfile  app.py  docker-compose.yaml  public_key.asc  pyproject.toml  secrets.yaml
lab1/lab/src/: inference.py
lab1/lab/tests/: test_app.py  test_settings.py
lab10/excercise1/: main.tf  outputs.tf  repo_config.tf  variables.tf
lab10/excercise2/: main.tf  outputs.tf  s3.tf  variables.tf
lab10/excercise3/: outputs.tf  s3.tf  variables.tf
lab10/excercise3/modules/s3_bucket/: main.tf  outputs.tf  variables.tf
lab12/: compose.yaml  pyproject.toml
lab12/dags/: 02_taskflow_pipeline.py  03_scheduling.py  04_backfilling.py  05_scheduling_with_venvs.py  06_s3_integration.py  07_connections_and_variables.py
lab12/storage-db-init/: init_storage.sql
lab13/: lab.ipynb  mcp_server.py  pyproject.toml
lab2/lab/: homework.ipynb  notebook_02_duckdb.ipynb  pyproject.toml
lab2/lab_and_homework/: homework.ipynb  notebook_01_psycopg.ipynb
lab3/: homework.ipynb  notebook_polars.ipynb
lab4/: pyproject.toml
lab4/homework/: docker-compose.yml  homework.ipynb
lab4/milvus_db/: rag.ipynb
lab4/vectorscale_db/: docker-compose.yml  lab.ipynb
lab6/: LAB_INSTRUCTION.ipynb  homework.ipynb
lab7/: homework.ipynb  pyproject.toml
src/: inference.py  main.py  settings.py  training.py
tests/: test_app.py  test_settings.py
